[package]
name = "gdiplus"
version = "0.0.1"
edition = "2021"
authors = ["David Rios <david.rios.gomes@gmail.com>"]
license = "MIT"
description = "Rust API for GDI+"
repository = "https://github.com/davidrios/gdiplus-rs"
readme = "README.md"
keywords = ["windows", "win32", "gdiplus", "gdip"]
categories = ["os::windows-apis"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[dependencies]
gdiplus-sys2 = "0.1"
winapi = { version = "0.3", features = [
    "windef",
]}

[dev-dependencies]
winapi = { version = "0.3", features = [
    "impl-default",
    "libloaderapi",
    "winerror",
    "winuser",
]}